--- a/luci-app-adguardhome/po/zh-cn/AdGuardHome.po
+++ b/luci-app-adguardhome/po/zh-cn/AdGuardHome.po
@@ -5,6 +5,12 @@ msgstr "基础设置"
 msgid "Log"
 msgstr "日志"
 
+msgid "AdGuardHome's version"
+msgstr "AdGuardHome 版本"
+
+msgid "In case of the latest realease is a source code that can not download the binary file"
+msgstr "防止最新release只有源码，导致下载不成功"
+
 msgid "Manual Config"
 msgstr "手动设置"
 
